add icon link to html head

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<!--[if IE 8]><html class="no-js lt-ie9" lang="sk"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="sk">
-<!--<![endif]-->
-
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=yes"
+    />
+    <meta name="theme-color" content="#000000" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>OWL Carousel</title>
 </head>
 
 <body>
